AP-19485: Migration to WorkflowContextV2
AP-19485 (Initialize WorkflowContextV2 in Analytics Platform)