@@ -48,18 +48,17 @@
  */
 package org.knime.workbench.explorer;
 
-import static org.hamcrest.core.Is.is;
-import static org.hamcrest.core.IsInstanceOf.instanceOf;
-import static org.hamcrest.core.StringContains.containsString;
-import static org.junit.Assert.assertThat;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertThrows;
+import static org.junit.Assert.assertTrue;
 
 import java.io.File;
 import java.io.IOException;
 import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
-import java.net.URLConnection;
 import java.nio.file.Path;
-import java.util.Collection;
 import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
@@ -68,17 +67,16 @@ import org.eclipse.core.runtime.Platform;
 import org.junit.After;
 import org.junit.Assume;
 import org.junit.Before;
-import org.junit.Rule;
 import org.junit.Test;
-import org.junit.rules.ExpectedException;
 import org.knime.core.node.ExecutionMonitor;
 import org.knime.core.node.KNIMEConstants;
 import org.knime.core.node.workflow.NodeContainer;
 import org.knime.core.node.workflow.NodeContext;
 import org.knime.core.node.workflow.NodeID;
-import org.knime.core.node.workflow.WorkflowContext;
 import org.knime.core.node.workflow.WorkflowCreationHelper;
 import org.knime.core.node.workflow.WorkflowManager;
+import org.knime.core.node.workflow.contextv2.WorkflowContextV2;
+import org.knime.core.util.auth.SimpleTokenAuthenticator;
 import org.knime.workbench.explorer.ExplorerURLStreamHandler.ExplorerURLConnection;
 
 /**
@@ -87,11 +85,6 @@ import org.knime.workbench.explorer.ExplorerURLStreamHandler.ExplorerURLConnecti
  * @author Thorsten Meinl, KNIME AG, Zurich, Switzerland
  */
 public class ExplorerURLStreamHandlerTest {
-    /**
-     * Exception expected by some testcases.
-     */
-    @Rule
-    public ExpectedException m_expectedException = ExpectedException.none();
 
     private ExplorerURLStreamHandler m_handler = new ExplorerURLStreamHandler();
 
@@ -121,7 +114,7 @@ public class ExplorerURLStreamHandlerTest {
             }
         }
 
-        Collection<NodeID> workflows = WorkflowManager.ROOT.getNodeContainers().stream().map(nc -> nc.getID())
+        final var workflows = WorkflowManager.ROOT.getNodeContainers().stream().map(nc -> nc.getID())
             .filter(id -> !m_staticWFMs.contains(id)).collect(Collectors.toList());
         workflows.stream().forEach(id -> WorkflowManager.ROOT.removeProject(id));
     }
@@ -133,13 +126,11 @@ public class ExplorerURLStreamHandlerTest {
      */
     @Test
     public void testWrongProtocol() throws Exception {
-        URL url = new URL("http://www.knime.com/");
-
-        m_expectedException.expect(IOException.class);
-        m_expectedException.expectMessage(containsString("Unexpected protocol"));
-        m_handler.openConnection(url);
+        final var url = new URL("http://www.knime.com/");
+        final var e = assertThrows(IOException.class, () -> m_handler.openConnection(url));
+        assertTrue("Error should indicate that the protocol is not `knime:`.",
+            e.getMessage().contains("Unexpected protocol"));
     }
-
 
     /**
      * Checks if a missing {@link NodeContext} is handled correctly.
@@ -148,29 +139,26 @@ public class ExplorerURLStreamHandlerTest {
      */
     @Test
     public void testNoNodeContext() throws Exception {
-        URL url = new URL("knime://knime.workflow/workflow.knime");
-
-        m_expectedException.expect(IOException.class);
-        m_expectedException.expectMessage(containsString("No context"));
-        m_handler.openConnection(url);
+        final var url = new URL("knime://knime.workflow/workflow.knime");
+        final var e = assertThrows(IOException.class, () -> m_handler.openConnection(url));
+        assertTrue("Error should indicate that no node context is set.", e.getMessage().contains("No context"));
     }
 
     /**
-     * Checks if a missing {@link WorkflowContext} is handled correctly.
+     * Checks if a missing {@link WorkflowContextV2} is handled correctly.
      *
      * @throws Exception if an error occurs
      */
     @Test
     public void testNoWorkflowContext() throws Exception {
-        URL url = new URL("knime://knime.workflow/workflow.knime");
-
-        WorkflowCreationHelper ch = new WorkflowCreationHelper();
-        WorkflowManager wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(), ch);
+        final var wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(),
+            new WorkflowCreationHelper(null));
         NodeContext.pushContext(wfm);
 
-        m_expectedException.expect(IOException.class);
-        m_expectedException.expectMessage(containsString("does not have a context"));
-        m_handler.openConnection(url);
+        final var url = new URL("knime://knime.workflow/workflow.knime");
+        final var e = assertThrows(IOException.class, () -> m_handler.openConnection(url));
+        assertTrue("Error should indicate that no workflow context is set.",
+            e.getMessage().contains("does not have a context"));
     }
 
     /**
@@ -180,97 +168,51 @@ public class ExplorerURLStreamHandlerTest {
      */
     @Test
     public void testResolveWorkflowRelativeLocal() throws Exception {
-        URL url = new URL("knime://knime.workflow/workflow.knime");
+        final var currentLocation = KNIMEConstants.getKNIMETempPath().resolve("root").resolve("workflow");
 
-        Path currentLocation = KNIMEConstants.getKNIMETempPath().resolve("root").resolve("workflow");
-        WorkflowCreationHelper ch = new WorkflowCreationHelper();
-        WorkflowContext.Factory fac = new WorkflowContext.Factory(currentLocation.toFile());
-        fac.setMountpointRoot(currentLocation.getParent().toFile());
-        ch.setWorkflowContext(fac.createContext());
-        WorkflowManager wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(), ch);
+        final var context = WorkflowContextV2.builder()
+                .withAnalyticsPlatformExecutor(exec -> exec
+                    .withCurrentUserAsUserId()
+                    .withLocalWorkflowPath(currentLocation)
+                    .withMountpoint("LOCAL", currentLocation.getParent()))
+                .withLocalLocation()
+                .build();
+
+        final var wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(),
+            new WorkflowCreationHelper(context));
         NodeContext.pushContext(wfm);
 
-        URLConnection conn = m_handler.openConnection(url);
-        Path expectedPath = currentLocation.resolve("workflow.knime");
-        assertThat("Unexpected resolved URL", conn.getURL().toURI(), is(expectedPath.toUri()));
+        assertResolvedURIEquals("Unexpected resolved URL",
+            currentLocation.resolve("workflow.knime").toUri(),
+            new URL("knime://knime.workflow/workflow.knime"));
 
-        // path outside the workflow
-        url = new URL("knime://knime.workflow/../test.txt");
-        conn = m_handler.openConnection(url);
-        expectedPath = currentLocation.resolve("..").resolve("test.txt");
-        assertThat("Unexpected resolved URL", conn.getURL().toURI(), is(expectedPath.toUri()));
+        assertResolvedURIEquals("Unexpected resolved URL",
+            currentLocation.resolve("..").resolve("test.txt").toUri(),
+            new URL("knime://knime.workflow/../test.txt"));
 
-        // Check proper handling of potentially encoded paths (see AP-17103).
-        url = new URL("knime://knime.workflow/../With Space+Plus.txt");
-        conn = m_handler.openConnection(url);
-        expectedPath = currentLocation.resolve("..").resolve("With Space+Plus.txt");
-        assertThat("Unexpected resolved URL", conn.getURL().toURI(), is(expectedPath.toUri()));
+        assertResolvedURIEquals("Unexpected resolved URL",
+            currentLocation.resolve("..").resolve("With Space+Plus.txt").toUri(),
+            new URL("knime://knime.workflow/../With Space+Plus.txt"));
 
-        url = new URL("knime://knime.workflow/../With%20Space+Plus.txt");
-        conn = m_handler.openConnection(url);
-        expectedPath = currentLocation.resolve("..").resolve("With Space+Plus.txt");
-        assertThat("Unexpected resolved URL", conn.getURL().toURI(), is(expectedPath.toUri()));
+        assertResolvedURIEquals("Unexpected resolved URL",
+            currentLocation.resolve("..").resolve("With Space+Plus.txt").toUri(),
+            new URL("knime://knime.workflow/../With%20Space+Plus.txt"));
 
-        // Properly handle double slashes in URLs (resolve to same directory), see AP-17103.
-        url = new URL("knime://knime.workflow//Double Slash Decoded");
-        conn = m_handler.openConnection(url);
-        expectedPath = currentLocation.resolve("Double Slash Decoded");
-        assertThat("Unexpected resolved URL", conn.getURL().toURI(), is(expectedPath.toUri()));
+        assertResolvedURIEquals("Unexpected resolved URL",
+            currentLocation.resolve("Double Slash Decoded").toUri(),
+            new URL("knime://knime.workflow//Double Slash Decoded"));
 
-        url = new URL("knime://knime.workflow/..//Double%20Slash%20Encoded");
-        conn = m_handler.openConnection(url);
-        expectedPath = currentLocation.resolve("..").resolve("Double Slash Encoded");
-        assertThat("Unexpected resolved URL", conn.getURL().toURI(), is(expectedPath.toUri()));
+        assertResolvedURIEquals("Unexpected resolved URL",
+            currentLocation.resolve("..").resolve("Double Slash Encoded").toUri(),
+            new URL("knime://knime.workflow/..//Double%20Slash%20Encoded"));
 
-        url = new URL("knime://knime.workflow/..//Double Slash Decoded");
-        conn = m_handler.openConnection(url);
-        expectedPath = currentLocation.resolve("..").resolve("Double Slash Decoded");
-        assertThat("Unexpected resolved URL", conn.getURL().toURI(), is(expectedPath.toUri()));
+        assertResolvedURIEquals("Unexpected resolved URL",
+            currentLocation.resolve("..").resolve("Double Slash Decoded").toUri(),
+            new URL("knime://knime.workflow/..//Double Slash Decoded"));
 
-        url = new URL("knime://knime.workflow//Double%20Slash%20Encoded");
-        conn = m_handler.openConnection(url);
-        expectedPath = currentLocation.resolve("Double Slash Encoded");
-        assertThat("Unexpected resolved URL", conn.getURL().toURI(), is(expectedPath.toUri()));
-    }
-
-    /**
-     * Checks if workflow-relative knime-URLs are resolved correctly for old executors.
-     *
-     * @throws Exception if an error occurs
-     */
-    @Test
-    public void testResolveWorkflowRelativeOriginalLocation() throws Exception {
-        URL url = new URL("knime://knime.workflow/workflow.knime");
-
-        // original location == current location
-        Path currentLocation = KNIMEConstants.getKNIMETempPath().resolve("root").resolve("workflow");
-        WorkflowCreationHelper ch = new WorkflowCreationHelper();
-        WorkflowContext.Factory fac = new WorkflowContext.Factory(currentLocation.toFile());
-        fac.setOriginalLocation(currentLocation.toFile());
-        ch.setWorkflowContext(fac.createContext());
-        WorkflowManager wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(), ch);
-        NodeContext.pushContext(wfm);
-
-        URLConnection conn = m_handler.openConnection(url);
-        Path expectedPath = currentLocation.resolve("workflow.knime");
-        assertThat("Unexpected resolved URL", conn.getURL().toURI(), is(expectedPath.toUri()));
-
-        // original location != current location
-        Path originalLocation = KNIMEConstants.getKNIMETempPath().resolve("original location");
-        fac.setOriginalLocation(originalLocation.toFile());
-        ch.setWorkflowContext(fac.createContext());
-        wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(), ch);
-        NodeContext.pushContext(wfm);
-
-        conn = m_handler.openConnection(url);
-        expectedPath = currentLocation.resolve("workflow.knime");
-        assertThat("Unexpected resolved URL", conn.getURL().toURI(), is(expectedPath.toUri()));
-
-        // path outside the workflow
-        url = new URL("knime://knime.workflow/../test.txt");
-        conn = m_handler.openConnection(url);
-        expectedPath = originalLocation.resolve("..").resolve("test.txt").normalize();
-        assertThat("Unexpected resolved URL", conn.getURL().toURI().normalize(), is(expectedPath.toUri().normalize()));
+        assertResolvedURIEquals("Unexpected resolved URL",
+            currentLocation.resolve("Double Slash Encoded").toUri(),
+            new URL("knime://knime.workflow//Double%20Slash%20Encoded"));
     }
 
     /**
@@ -280,20 +222,25 @@ public class ExplorerURLStreamHandlerTest {
      */
     @Test
     public void testResolveWorkflowRelativeObeyMountpointRoot() throws Exception {
-        URL url = new URL("knime://knime.workflow/../../test.txt");
-
         // original location == current location
+        final var url = new URL("knime://knime.workflow/../../test.txt");
         Path currentLocation = KNIMEConstants.getKNIMETempPath().resolve("root").resolve("workflow");
-        WorkflowCreationHelper ch = new WorkflowCreationHelper();
-        WorkflowContext.Factory fac = new WorkflowContext.Factory(currentLocation.toFile());
-        fac.setMountpointRoot(currentLocation.getParent().toFile());
-        ch.setWorkflowContext(fac.createContext());
-        WorkflowManager wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(), ch);
+
+        final var context = WorkflowContextV2.builder()
+                .withAnalyticsPlatformExecutor(exec -> exec
+                    .withCurrentUserAsUserId()
+                    .withLocalWorkflowPath(currentLocation)
+                    .withMountpoint("LOCAL", currentLocation.getParent()))
+                .withLocalLocation()
+                .build();
+
+        final var wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(),
+            new WorkflowCreationHelper(context));
         NodeContext.pushContext(wfm);
 
-        m_expectedException.expect(IOException.class);
-        m_expectedException.expectMessage(containsString("Leaving the mount point is not allowed"));
-        m_handler.openConnection(url);
+        final var e = assertThrows(IOException.class, () -> m_handler.openConnection(url));
+        assertTrue("Error should indicate that leaving the mountpoint is not allowed.",
+            e.getMessage().contains("Leaving the mount point is not allowed"));
     }
 
     /**
@@ -303,34 +250,35 @@ public class ExplorerURLStreamHandlerTest {
      */
     @Test
     public void testResolveWorkflowRelativeToServer() throws Exception {
-        URL url = new URL("knime://knime.workflow/workflow.knime");
-        URI baseUri = new URI("http://localhost:8080/knime");
-
         // original location == current location
-        Path currentLocation = KNIMEConstants.getKNIMETempPath().resolve("root").resolve("workflow");
-        WorkflowCreationHelper ch = new WorkflowCreationHelper();
-        WorkflowContext.Factory fac = new WorkflowContext.Factory(currentLocation.toFile());
-        fac.setOriginalLocation(currentLocation.toFile());
-        fac.setRemoteAddress(baseUri, "workflow");
-        fac.setRemoteAuthToken("token");
-        ch.setWorkflowContext(fac.createContext());
-        WorkflowManager wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(), ch);
+        final var baseUri = new URI("http://localhost:8080/knime");
+        final var currentLocation = KNIMEConstants.getKNIMETempPath().resolve("root").resolve("workflow");
+
+        final var context = WorkflowContextV2.builder()
+                .withServerJobExecutor(exec -> exec
+                    .withCurrentUserAsUserId()
+                    .withLocalWorkflowPath(currentLocation)
+                    .withJobId(UUID.randomUUID()))
+                .withServerLocation(loc -> loc
+                    .withRepositoryAddress(baseUri)
+                    .withWorkflowPath("/workflow")
+                    .withAuthenticator(new SimpleTokenAuthenticator("token"))
+                    .withDefaultMountId("Testserver"))
+                .build();
+        final var wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(),
+            new WorkflowCreationHelper(context));
         NodeContext.pushContext(wfm);
 
         // links inside the workflow must stay local links to the workflow copy
-        URLConnection conn = m_handler.openConnection(url);
-        URI expectedUri = new URI(currentLocation.toUri().toString() + "/workflow.knime").normalize();
-        assertThat("Unexpected resolved URL", conn.getURL().toURI(), is(expectedUri));
-        // we cannot check whether the Authorization header is set correctly, because HttpURLConnection
-        // doesn't return it for security reasons
+        assertResolvedURIEquals("Unexpected resolved URL",
+            new URI(currentLocation.toUri().toString() + "/workflow.knime").normalize(),
+            new URL("knime://knime.workflow/workflow.knime"));
 
         // path outside the workflow
-        url = new URL("knime://knime.workflow/../test 1.txt");
-        conn = m_handler.openConnection(url);
-        expectedUri = new URI(baseUri.toString() + "/test%201.txt:data");
-        assertThat("Unexpected resolved URL", conn.getURL().toURI(), is(expectedUri));
+        assertResolvedURIEquals("Unexpected resolved URL",
+            new URI(baseUri.toString() + "/test%201.txt:data"),
+            new URL("knime://knime.workflow/../test 1.txt"));
     }
-
 
     /**
      * Checks if mountpoint-relative knime-URLs are resolved correctly.
@@ -339,29 +287,30 @@ public class ExplorerURLStreamHandlerTest {
      */
     @Test
     public void testResolveMountPointRelativeLocal() throws Exception {
-        Path currentLocation = KNIMEConstants.getKNIMETempPath().resolve("root").resolve("workflow");
-        WorkflowCreationHelper ch = new WorkflowCreationHelper();
-        WorkflowContext.Factory fac = new WorkflowContext.Factory(currentLocation.toFile());
-        fac.setMountpointRoot(currentLocation.getParent().toFile());
-        ch.setWorkflowContext(fac.createContext());
-        WorkflowManager wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(), ch);
+        final var currentLocation = KNIMEConstants.getKNIMETempPath().resolve("root").resolve("workflow");
+        final var context = WorkflowContextV2.builder()
+                .withAnalyticsPlatformExecutor(exec -> exec
+                    .withCurrentUserAsUserId()
+                    .withLocalWorkflowPath(currentLocation)
+                    .withMountpoint("LOCAL", currentLocation.getParent()))
+                .withLocalLocation()
+                .build();
+
+        final var wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(),
+            new WorkflowCreationHelper(context));
         NodeContext.pushContext(wfm);
 
-        URL url = new URL("knime://knime.mountpoint/test.txt");
-        URLConnection conn = m_handler.openConnection(url);
-        Path expectedPath = currentLocation.getParent().resolve("test.txt");
-        assertThat("Unexpected resolved URL", conn.getURL().toURI(), is(expectedPath.toUri()));
+        assertResolvedURIEquals("Unexpected resolved URL",
+            currentLocation.getParent().resolve("test.txt").toUri(),
+            new URL("knime://knime.mountpoint/test.txt"));
 
-        // Check proper handling of potentially encoded paths (see AP-17103).
-        url = new URL("knime://knime.mountpoint/With Space+Plus.txt");
-        conn = m_handler.openConnection(url);
-        expectedPath = currentLocation.getParent().resolve("With Space+Plus.txt");
-        assertThat("Unexpected resolved URL", conn.getURL().toURI(), is(expectedPath.toUri()));
+        assertResolvedURIEquals("Unexpected resolved URL",
+            currentLocation.getParent().resolve("With Space+Plus.txt").toUri(),
+            new URL("knime://knime.mountpoint/With Space+Plus.txt"));
 
-        url = new URL("knime://knime.mountpoint/With%20Space+Plus.txt");
-        conn = m_handler.openConnection(url);
-        expectedPath = currentLocation.getParent().resolve("With Space+Plus.txt");
-        assertThat("Unexpected resolved URL", conn.getURL().toURI(), is(expectedPath.toUri()));
+        assertResolvedURIEquals("Unexpected resolved URL",
+            currentLocation.getParent().resolve("With Space+Plus.txt").toUri(),
+            new URL("knime://knime.mountpoint/With%20Space+Plus.txt"));
     }
 
 
@@ -372,47 +321,27 @@ public class ExplorerURLStreamHandlerTest {
      */
     @Test
     public void testResolveMountpointRelativeLocalUNC() throws Exception {
-        Assume.assumeThat(Platform.getOS(), is(Platform.OS_WIN32));
+        Assume.assumeTrue(Platform.OS_WIN32.equals(Platform.getOS()));
 
-        URL url = new URL("knime://knime.mountpoint/test.txt");
+        final File currentLocation = new File("\\\\server\\repo\\workflow");
 
-        File currentLocation = new File("\\\\server\\repo\\workflow");
-        WorkflowCreationHelper ch = new WorkflowCreationHelper();
-        WorkflowContext.Factory fac = new WorkflowContext.Factory(currentLocation);
-        fac.setMountpointRoot(currentLocation.getParentFile());
-        ch.setWorkflowContext(fac.createContext());
-        WorkflowManager wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(), ch);
+        final var context = WorkflowContextV2.builder()
+                .withAnalyticsPlatformExecutor(exec -> exec
+                    .withCurrentUserAsUserId()
+                    .withLocalWorkflowPath(currentLocation.toPath())
+                    .withMountpoint("LOCAL", currentLocation.getParentFile().toPath()))
+                .withLocalLocation()
+                .build();
+
+        final var wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(),
+            new WorkflowCreationHelper(context));
         NodeContext.pushContext(wfm);
 
-        URLConnection conn = m_handler.openConnection(url);
-        File expectedPath = new File(currentLocation.getParentFile(), "test.txt");
-        assertThat("Unexpected resolved URL", conn.getURL().toURI(), is(expectedPath.toURI()));
-        assertThat("Unexpected resulting file", new File(conn.getURL().toURI()), is(expectedPath));
-    }
-
-    /**
-     * Checks if mountpoint-relative knime-URLs are resolved correctly for old executors.
-     *
-     * @throws Exception if an error occurs
-     */
-    @Test
-    public void testResolveMountpointRelativeOriginalLocation() throws Exception {
-        URL url = new URL("knime://knime.mountpoint/test.txt");
-
-        // original location == current location
-        Path currentLocation = KNIMEConstants.getKNIMETempPath().resolve("root").resolve("workflow");
-        WorkflowCreationHelper ch = new WorkflowCreationHelper();
-        WorkflowContext.Factory fac = new WorkflowContext.Factory(currentLocation.toFile());
-        Path otherMountpointRoot = KNIMEConstants.getKNIMETempPath().resolve("some other root");
-        fac.setMountpointRoot(otherMountpointRoot.toFile());
-        fac.setOriginalLocation(currentLocation.toFile());
-        ch.setWorkflowContext(fac.createContext());
-        WorkflowManager wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(), ch);
-        NodeContext.pushContext(wfm);
-
-        URLConnection conn = m_handler.openConnection(url);
-        Path expectedPath = otherMountpointRoot.resolve("test.txt");
-        assertThat("Unexpected resolved URL", conn.getURL().toURI(), is(expectedPath.toUri()));
+        final var url = new URL("knime://knime.mountpoint/test.txt");
+        final var expectedPath = new File(currentLocation.getParentFile(), "test.txt");
+        final var conn = m_handler.openConnection(url);
+        assertEquals("Unexpected resolved URL", expectedPath.toURI(), conn.getURL().toURI());
+        assertEquals("Unexpected resulting file", expectedPath, new File(conn.getURL().toURI()));
     }
 
     /**
@@ -422,20 +351,25 @@ public class ExplorerURLStreamHandlerTest {
      */
     @Test
     public void testResolveMountpointRelativeObeyMountpointRoot() throws Exception {
-        URL url = new URL("knime://knime.mountpoint/../test.txt");
-
         // original location == current location
-        Path currentLocation = KNIMEConstants.getKNIMETempPath().resolve("root").resolve("workflow");
-        WorkflowCreationHelper ch = new WorkflowCreationHelper();
-        WorkflowContext.Factory fac = new WorkflowContext.Factory(currentLocation.toFile());
-        fac.setMountpointRoot(currentLocation.getParent().toFile());
-        ch.setWorkflowContext(fac.createContext());
-        WorkflowManager wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(), ch);
+        final var url = new URL("knime://knime.mountpoint/../test.txt");
+        final var currentLocation = KNIMEConstants.getKNIMETempPath().resolve("root").resolve("workflow");
+
+        final var context = WorkflowContextV2.builder()
+                .withAnalyticsPlatformExecutor(exec -> exec
+                    .withCurrentUserAsUserId()
+                    .withLocalWorkflowPath(currentLocation)
+                    .withMountpoint("LOCAL", currentLocation.getParent()))
+                .withLocalLocation()
+                .build();
+
+        final var wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(),
+            new WorkflowCreationHelper(context));
         NodeContext.pushContext(wfm);
 
-        m_expectedException.expect(IOException.class);
-        m_expectedException.expectMessage(containsString("Leaving the mount point is not allowed"));
-        m_handler.openConnection(url);
+        final var e = assertThrows(IOException.class, () -> m_handler.openConnection(url));
+        assertTrue("Error should indicate that leaving the mountpoint is not allowed.",
+            e.getMessage().contains("Leaving the mount point is not allowed"));
     }
 
     /**
@@ -445,59 +379,67 @@ public class ExplorerURLStreamHandlerTest {
      */
     @Test
     public void testResolveMountpointRelativeToServer() throws Exception {
-        URL url = new URL("knime://knime.mountpoint/some where/outside.txt");
-        URI baseUri = new URI("http://localhost:8080/knime");
-
         // original location == current location
-        Path currentLocation = KNIMEConstants.getKNIMETempPath().resolve("root").resolve("workflow");
-        WorkflowCreationHelper ch = new WorkflowCreationHelper();
-        WorkflowContext.Factory fac = new WorkflowContext.Factory(currentLocation.toFile());
-        fac.setOriginalLocation(currentLocation.toFile());
-        fac.setRemoteAddress(baseUri, "workflow");
-        fac.setRemoteAuthToken("token");
-        ch.setWorkflowContext(fac.createContext());
-        WorkflowManager wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(), ch);
+        final var baseUri = URI.create("http://localhost:8080/knime");
+        final var currentLocation = KNIMEConstants.getKNIMETempPath().resolve("root").resolve("workflow");
+
+        final var context = WorkflowContextV2.builder()
+                .withServerJobExecutor(exec -> exec
+                    .withCurrentUserAsUserId()
+                    .withLocalWorkflowPath(currentLocation)
+                    .withJobId(UUID.randomUUID()))
+                .withServerLocation(loc -> loc
+                    .withRepositoryAddress(baseUri)
+                    .withWorkflowPath("/workflow")
+                    .withAuthenticator(new SimpleTokenAuthenticator("token"))
+                    .withDefaultMountId("TestServer"))
+                .build();
+
+        final var wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(),
+            new WorkflowCreationHelper(context));
         NodeContext.pushContext(wfm);
 
-        URLConnection conn = m_handler.openConnection(url);
-        URI expectedUri = new URI(baseUri.toString() + "/some%20where/outside.txt:data");
-        assertThat("Unexpected resolved URL", conn.getURL().toURI(), is(expectedUri));
-        // we cannot check whether the Authorization header is set correctly, because HttpURLConnection
-        // doesn't return it for security reasons
+        assertResolvedURIEquals("Unexpected resolved URL",
+            new URI(baseUri.toString() + "/some%20where/outside.txt:data"),
+            new URL("knime://knime.mountpoint/some where/outside.txt"));
     }
 
 
 
 
     /**
-     * Checks if workflow-relative knime-URLs that reside on an UNC drive are resolved correctly (see AP-7427).
+     * Checks if workflow-relative knime-URLs that reside on a UNC drive are resolved correctly (see AP-7427).
      *
      * @throws Exception if an error occurs
      */
     @Test
     public void testResolveWorkflowRelativeLocalUNC() throws Exception {
-        Assume.assumeThat(Platform.getOS(), is(Platform.OS_WIN32));
+        Assume.assumeTrue(Platform.OS_WIN32.equals(Platform.getOS()));
 
-        URL url = new URL("knime://knime.workflow/workflow.knime");
+        final File currentLocation = new File("\\\\server\\repo\\workflow");
 
-        File currentLocation = new File("\\\\server\\repo\\workflow");
-        WorkflowCreationHelper ch = new WorkflowCreationHelper();
-        WorkflowContext.Factory fac = new WorkflowContext.Factory(currentLocation);
-        fac.setMountpointRoot(currentLocation.getParentFile());
-        ch.setWorkflowContext(fac.createContext());
-        WorkflowManager wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(), ch);
+        final var context = WorkflowContextV2.builder()
+                .withAnalyticsPlatformExecutor(exec -> exec
+                    .withCurrentUserAsUserId()
+                    .withLocalWorkflowPath(currentLocation.toPath())
+                    .withMountpoint("LOCAL", currentLocation.getParentFile().toPath()))
+                .withLocalLocation()
+                .build();
+
+        final var wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(),
+            new WorkflowCreationHelper(context));
         NodeContext.pushContext(wfm);
 
-        URLConnection conn = m_handler.openConnection(url);
-        File expectedPath = new File(currentLocation, "workflow.knime");
-        assertThat("Unexpected resolved URL", conn.getURL().toURI(), is(expectedPath.toURI()));
+        assertResolvedURIEquals("Unexpected resolved URL",
+            new File(currentLocation, "workflow.knime").toURI(),
+            new URL("knime://knime.workflow/workflow.knime"));
 
         // path outside the workflow
-        url = new URL("knime://knime.workflow/../test.txt");
-        conn = m_handler.openConnection(url);
-        expectedPath = new File(currentLocation, "../test.txt");
-        assertThat("Unexpected resolved URL", conn.getURL().toURI(), is(expectedPath.toURI()));
-        assertThat("Unexpected resulting file", new File(conn.getURL().toURI()), is(expectedPath));
+        final var url = new URL("knime://knime.workflow/../test.txt");
+        final var expectedPath = new File(currentLocation, "../test.txt");
+        final var conn = m_handler.openConnection(url);
+        assertEquals("Unexpected resolved URL", expectedPath.toURI(), conn.getURL().toURI());
+        assertEquals("Unexpected resulting file", expectedPath, new File(conn.getURL().toURI()));
     }
 
 
@@ -508,11 +450,10 @@ public class ExplorerURLStreamHandlerTest {
      */
     @Test
     public void testResolveLocalMountpointURL() throws Exception {
-        assertThat("NodeContext not expected to be set at this point", NodeContext.getContext(), is((NodeContext)null));
-        URL url = new URL("knime://LOCAL/test.txt");
-
-        URLConnection conn = m_handler.openConnection(url);
-        assertThat("Unexpected connection returned", conn, is(instanceOf(ExplorerURLConnection.class)));
+        assertNull("NodeContext not expected to be set at this point", NodeContext.getContext());
+        final var url = new URL("knime://LOCAL/test.txt");
+        final var conn = m_handler.openConnection(url);
+        assertTrue("Unexpected connection returned", conn instanceof ExplorerURLConnection);
     }
 
     /**
@@ -522,51 +463,27 @@ public class ExplorerURLStreamHandlerTest {
      */
     @Test
     public void testResolveRemoteMountpointURL() throws Exception {
-        URL url = new URL("knime://Server/some where/outside.txt");
-        URI baseUri = new URI("https://localhost:8080/knime");
+        final var currentLocation = KNIMEConstants.getKNIMETempPath().resolve("root").resolve("workflow");
 
-        Path currentLocation = KNIMEConstants.getKNIMETempPath().resolve("root").resolve("workflow");
-        WorkflowCreationHelper ch = new WorkflowCreationHelper();
-        WorkflowContext.Factory fac = new WorkflowContext.Factory(currentLocation.toFile());
-        fac.setOriginalLocation(currentLocation.toFile());
-        fac.setRemoteAddress(baseUri, "workflow");
-        fac.setRemoteAuthToken("token");
-        fac.setRemoteMountId("Server");
-        ch.setWorkflowContext(fac.createContext());
-        WorkflowManager wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(), ch);
+        final var context = WorkflowContextV2.builder()
+                .withServerJobExecutor(exec -> exec
+                    .withCurrentUserAsUserId()
+                    .withLocalWorkflowPath(currentLocation)
+                    .withJobId(UUID.randomUUID()))
+                .withServerLocation(loc -> loc
+                    .withRepositoryAddress(URI.create("https://localhost:8080/knime"))
+                    .withWorkflowPath("/workflow")
+                    .withAuthenticator(new SimpleTokenAuthenticator("token"))
+                    .withDefaultMountId("Server"))
+                .build();
+
+        final var wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(),
+            new WorkflowCreationHelper(context));
         NodeContext.pushContext(wfm);
 
-        URLConnection conn = m_handler.openConnection(url);
-        URI expectedUri = new URI(baseUri.toString() + "/some%20where/outside.txt:data");
-        assertThat("Unexpected resolved URL", conn.getURL().toURI(), is(expectedUri));
-    }
-
-
-    /**
-     * Check if URLs with a remote mount point are resolved correctly for old jobs that don't have a remote token
-     *
-     * @throws Exception if an error occurs
-     */
-    @Test
-    public void testResolveRemoteMountpointURLWithoutToken() throws Exception {
-        URL url = new URL("knime://Server/some where/outside.txt");
-        URI baseUri = new URI("https://localhost:8080/knime");
-
-        Path mpRoot = KNIMEConstants.getKNIMETempPath().resolve("root");
-        Path currentLocation = mpRoot.resolve("workflow");
-        WorkflowCreationHelper ch = new WorkflowCreationHelper();
-        WorkflowContext.Factory fac = new WorkflowContext.Factory(currentLocation.toFile());
-        fac.setMountpointRoot(mpRoot.toFile());
-        fac.setOriginalLocation(currentLocation.toFile());
-        fac.setRemoteAddress(baseUri, "workflow");
-        fac.setRemoteMountId("Server");
-        ch.setWorkflowContext(fac.createContext());
-        WorkflowManager wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(), ch);
-        NodeContext.pushContext(wfm);
-
-        URLConnection conn = m_handler.openConnection(url);
-        URI expectedUri = new URI(mpRoot.toUri() + "/some%20where/outside.txt").normalize();
-        assertThat("Unexpected resolved URL", conn.getURL().toURI(), is(expectedUri));
+        assertResolvedURIEquals("Unexpected resolved URL",
+            new URI(URI.create("https://localhost:8080/knime").toString() + "/some%20where/outside.txt:data"),
+            new URL("knime://Server/some where/outside.txt"));
     }
 
 
@@ -577,30 +494,34 @@ public class ExplorerURLStreamHandlerTest {
      */
     @Test
     public void testResolveNodeRelativeLocal() throws Exception {
-        Path currentLocation = KNIMEConstants.getKNIMETempPath().resolve("root").resolve("workflow");
-        WorkflowCreationHelper ch = new WorkflowCreationHelper();
-        WorkflowContext.Factory fac = new WorkflowContext.Factory(currentLocation.toFile());
-        fac.setMountpointRoot(currentLocation.getParent().toFile());
-        ch.setWorkflowContext(fac.createContext());
-        WorkflowManager wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(), ch);
+        final var mountpointRoot = KNIMEConstants.getKNIMETempPath().resolve("root");
+        final var currentLocation = mountpointRoot.resolve("workflow");
+
+        final var context = WorkflowContextV2.builder()
+                .withAnalyticsPlatformExecutor(exec -> exec
+                    .withCurrentUserAsUserId()
+                    .withLocalWorkflowPath(currentLocation)
+                    .withMountpoint("LOCAL", mountpointRoot))
+                .withLocalLocation()
+                .build();
+
+        final var wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(),
+            new WorkflowCreationHelper(context));
         wfm.save(currentLocation.toFile(), new ExecutionMonitor(), false);
         NodeContext.pushContext(wfm);
 
-        URL url = new URL("knime://knime.node/test.txt");
-        URLConnection conn = m_handler.openConnection(url);
-        Path expectedPath = currentLocation.resolve("test.txt");
-        assertThat("Unexpected resolved URL", conn.getURL().toURI(), is(expectedPath.toUri()));
+        assertResolvedURIEquals("Unexpected resolved URL",
+            currentLocation.resolve("test.txt").toUri(),
+            new URL("knime://knime.node/test.txt"));
 
         // Check proper handling of potentially encoded paths (see AP-17103).
-        url = new URL("knime://knime.node/With Space+Plus.txt");
-        conn = m_handler.openConnection(url);
-        expectedPath = currentLocation.resolve("With Space+Plus.txt");
-        assertThat("Unexpected resolved URL", conn.getURL().toURI(), is(expectedPath.toUri()));
+        assertResolvedURIEquals("Unexpected resolved URL",
+            currentLocation.resolve("With Space+Plus.txt").toUri(),
+            new URL("knime://knime.node/With Space+Plus.txt"));
 
-        url = new URL("knime://knime.node/With%20Space+Plus.txt");
-        conn = m_handler.openConnection(url);
-        expectedPath = currentLocation.resolve("With Space+Plus.txt");
-        assertThat("Unexpected resolved URL", conn.getURL().toURI(), is(expectedPath.toUri()));
+        assertResolvedURIEquals("Unexpected resolved URL",
+            currentLocation.resolve("With Space+Plus.txt").toUri(),
+            new URL("knime://knime.node/With%20Space+Plus.txt"));
     }
 
     /**
@@ -610,19 +531,24 @@ public class ExplorerURLStreamHandlerTest {
      */
     @Test
     public void testResolveNodeRelativeLocalNotSaved() throws Exception {
-        URL url = new URL("knime://knime.node/test.txt");
+        final var currentLocation = KNIMEConstants.getKNIMETempPath().resolve("root").resolve("workflow");
 
-        Path currentLocation = KNIMEConstants.getKNIMETempPath().resolve("root").resolve("workflow");
-        WorkflowCreationHelper ch = new WorkflowCreationHelper();
-        WorkflowContext.Factory fac = new WorkflowContext.Factory(currentLocation.toFile());
-        fac.setMountpointRoot(currentLocation.getParent().toFile());
-        ch.setWorkflowContext(fac.createContext());
-        WorkflowManager wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(), ch);
+        final var context = WorkflowContextV2.builder()
+                .withAnalyticsPlatformExecutor(exec -> exec
+                    .withCurrentUserAsUserId()
+                    .withLocalWorkflowPath(currentLocation)
+                    .withMountpoint("LOCAL", currentLocation.getParent()))
+                .withLocalLocation()
+                .build();
+
+        final var wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(),
+            new WorkflowCreationHelper(context));
         NodeContext.pushContext(wfm);
 
-        m_expectedException.expect(IOException.class);
-        m_expectedException.expectMessage(containsString("Workflow must be saved"));
-        m_handler.openConnection(url);
+        final var url = new URL("knime://knime.node/test.txt");
+        final var e = assertThrows(IOException.class, () -> m_handler.openConnection(url));
+        assertTrue("Error should indicate that the workflow must be saved.",
+            e.getMessage().contains("Workflow must be saved"));
     }
 
     /**
@@ -632,45 +558,52 @@ public class ExplorerURLStreamHandlerTest {
      */
     @Test
     public void testResolveNodeRelativeLocalDontLeaveWorkflow() throws Exception {
-        URL url = new URL("knime://knime.node/../test.txt");
+        final var currentLocation = KNIMEConstants.getKNIMETempPath().resolve("root").resolve("workflow");
 
-        Path currentLocation = KNIMEConstants.getKNIMETempPath().resolve("root").resolve("workflow");
-        WorkflowCreationHelper ch = new WorkflowCreationHelper();
-        WorkflowContext.Factory fac = new WorkflowContext.Factory(currentLocation.toFile());
-        fac.setMountpointRoot(currentLocation.getParent().toFile());
-        ch.setWorkflowContext(fac.createContext());
-        WorkflowManager wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(), ch);
+        final var context = WorkflowContextV2.builder()
+                .withAnalyticsPlatformExecutor(exec -> exec
+                    .withCurrentUserAsUserId()
+                    .withLocalWorkflowPath(currentLocation)
+                    .withMountpoint("LOCAL", currentLocation.getParent()))
+                .withLocalLocation()
+                .build();
+
+        final var wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(),
+            new WorkflowCreationHelper(context));
         wfm.save(currentLocation.toFile(), new ExecutionMonitor(), false);
         NodeContext.pushContext(wfm);
 
-        m_expectedException.expect(IOException.class);
-        m_expectedException.expectMessage(containsString("Leaving the workflow is not allowed"));
-        m_handler.openConnection(url);
+        final var url = new URL("knime://knime.node/../test.txt");
+        final var e = assertThrows(IOException.class, () -> m_handler.openConnection(url));
+        assertTrue("Error should indicate that leaving the workflow is not allowed.",
+            e.getMessage().contains("Leaving the workflow is not allowed"));
     }
 
     /**
-     * Checks if German special characters in a local work flow relative URL are UTF-8 encoded.
+     * Checks if German special characters in a local workflow relative URL are UTF-8 encoded.
      *
      * @throws Exception
      */
     @Test
     public void testWorkflowRelativeURLIsEncoded() throws Exception {
-        String umlautFileName = "workflöw.knime";
-        URL urlWithUmlaut = new URL("knime://knime.workflow/" + umlautFileName);
+        final var mountpointRoot = KNIMEConstants.getKNIMETempPath().resolve("root");
+        final var currentLocation = mountpointRoot.resolve("workflow");
+        final var context = WorkflowContextV2.builder()
+                .withAnalyticsPlatformExecutor(exec -> exec
+                    .withCurrentUserAsUserId()
+                    .withLocalWorkflowPath(currentLocation)
+                    .withMountpoint("LOCAL", mountpointRoot))
+                .withLocalLocation()
+                .build();
 
-        Path currentLocation = KNIMEConstants.getKNIMETempPath().resolve("root").resolve("workflow");
-        WorkflowCreationHelper workflowCreation = new WorkflowCreationHelper();
-        WorkflowContext.Factory contextFactory = new WorkflowContext.Factory(currentLocation.toFile());
-        contextFactory.setMountpointRoot(currentLocation.getParent().toFile());
-        workflowCreation.setWorkflowContext(contextFactory.createContext());
-        NodeContext.pushContext(WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(), workflowCreation));
+        final var wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(),
+            new WorkflowCreationHelper(context));
+        NodeContext.pushContext(wfm);
 
-        URLConnection connection = m_handler.openConnection(urlWithUmlaut);
-        String utf8FileName = "workfl%C3%B6w.knime";
-        Path expectedPath = currentLocation.resolve(utf8FileName);
-        URI expectedURI = new URI(expectedPath.toUri().toString().replace("25", "")); // hack to remove unwanted encoding of %!
-
-        assertThat("Unexpected resolved URL", connection.getURL().toURI(), is(expectedURI));
+        assertResolvedURIEquals("Unexpected resolved URL",
+            // hack to remove unwanted encoding of %!
+            new URI(currentLocation.resolve("workfl%C3%B6w.knime").toUri().toString().replace("25", "")),
+            new URL("knime://knime.workflow/workflöw.knime"));
     }
 
     /**
@@ -680,20 +613,24 @@ public class ExplorerURLStreamHandlerTest {
      */
     @Test
     public void testLocalMountPointRelativeURLIsEncoded() throws Exception {
-        URL url = new URL("knime://knime.mountpoint/testÖ.txt");
+        final var mountpointRoot = KNIMEConstants.getKNIMETempPath().resolve("root");
+        final var currentLocation = mountpointRoot.resolve("workflow");
+        final var context = WorkflowContextV2.builder()
+                .withAnalyticsPlatformExecutor(exec -> exec
+                    .withCurrentUserAsUserId()
+                    .withLocalWorkflowPath(currentLocation)
+                    .withMountpoint("LOCAL", mountpointRoot))
+                .withLocalLocation()
+                .build();
 
-        Path currentLocation = KNIMEConstants.getKNIMETempPath().resolve("root").resolve("workflow");
-        WorkflowCreationHelper workflowCreation = new WorkflowCreationHelper();
-        WorkflowContext.Factory workflowContextFactory = new WorkflowContext.Factory(currentLocation.toFile());
-        workflowContextFactory.setMountpointRoot(currentLocation.getParent().toFile());
-        workflowCreation.setWorkflowContext(workflowContextFactory.createContext());
-        WorkflowManager wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(), workflowCreation);
+        final var wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(),
+            new WorkflowCreationHelper(context));
         NodeContext.pushContext(wfm);
 
-        URLConnection conn = m_handler.openConnection(url);
-        Path expectedPath = currentLocation.getParent().resolve("test%C3%96.txt");
-        URI expectedURI = new URI(expectedPath.toUri().toString().replace("25", "")); // hack to remove unwanted encoding of %!
-        assertThat("Unexpected resolved URL", conn.getURL().toURI(), is(expectedURI));
+        assertResolvedURIEquals("Unexpected resolved URL",
+            // hack to remove unwanted encoding of %!
+            new URI(mountpointRoot.resolve("test%C3%96.txt").toUri().toString().replace("25", "")),
+            new URL("knime://knime.mountpoint/testÖ.txt"));
     }
 
     /**
@@ -703,21 +640,24 @@ public class ExplorerURLStreamHandlerTest {
      */
     @Test
     public void testLocalNodeRelativeURLIsEncoded() throws Exception {
-        URL url = new URL("knime://knime.node/testÖ.txt");
+        final var currentLocation = KNIMEConstants.getKNIMETempPath().resolve("root").resolve("workflow");
+        final var context = WorkflowContextV2.builder()
+                .withAnalyticsPlatformExecutor(exec -> exec
+                    .withCurrentUserAsUserId()
+                    .withLocalWorkflowPath(currentLocation)
+                    .withMountpoint("LOCAL", currentLocation.getParent()))
+                .withLocalLocation()
+                .build();
 
-        Path currentLocation = KNIMEConstants.getKNIMETempPath().resolve("root").resolve("workflow");
-        WorkflowCreationHelper workflowCreation = new WorkflowCreationHelper();
-        WorkflowContext.Factory workflowContextFactory = new WorkflowContext.Factory(currentLocation.toFile());
-        workflowContextFactory.setMountpointRoot(currentLocation.getParent().toFile());
-        workflowCreation.setWorkflowContext(workflowContextFactory.createContext());
-        WorkflowManager wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(), workflowCreation);
+        final var wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(),
+            new WorkflowCreationHelper(context));
         wfm.save(currentLocation.toFile(), new ExecutionMonitor(), false);
         NodeContext.pushContext(wfm);
 
-        URLConnection conn = m_handler.openConnection(url);
-        Path expectedPath = currentLocation.resolve("test%C3%96.txt");
-        URI expectedURI = new URI(expectedPath.toUri().toString().replace("25", "")); // hack to remove unwanted encoding of %!
-        assertThat("Unexpected resolved URL", conn.getURL().toURI(), is(expectedURI));
+        assertResolvedURIEquals("Unexpected resolved URL",
+            // hack to remove unwanted encoding of %!
+            new URI(currentLocation.resolve("test%C3%96.txt").toUri().toString().replace("25", "")),
+            new URL("knime://knime.node/testÖ.txt"));
     }
 
     /**
@@ -727,24 +667,28 @@ public class ExplorerURLStreamHandlerTest {
      */
     @Test
     public void testRemoteMountpointURLIsEncoded() throws Exception {
-        String umlautFileName = "röw0.json";
-        URL urlWithUmlaut = new URL("knime://knime.workflow/../" + umlautFileName);
-        URI baseUri = new URI("https://localhost:8080/knime");
+        // Mountpoint is never considered in the old code path, and it makes little sense here IMHO
+        final var currentLocation = KNIMEConstants.getKNIMETempPath().resolve("root").resolve("workflow");
+        final var context = WorkflowContextV2.builder()
+                .withServerJobExecutor(exec -> exec
+                    .withCurrentUserAsUserId()
+                    .withLocalWorkflowPath(currentLocation)
+                    .withJobId(UUID.randomUUID())
+                    .withIsRemote(false))
+                .withServerLocation(loc -> loc
+                    .withRepositoryAddress(URI.create("https://localhost:8080/knime"))
+                    .withWorkflowPath("/workflow")
+                    .withAuthenticator(new SimpleTokenAuthenticator("token"))
+                    .withDefaultMountId("Server"))
+                .build();
 
-        Path mountPointRoot = KNIMEConstants.getKNIMETempPath().resolve("root");
-        Path currentLocation = mountPointRoot.resolve("workflow");
-        WorkflowCreationHelper workflowCreation = new WorkflowCreationHelper();
-        WorkflowContext.Factory workflowContextFactory = new WorkflowContext.Factory(currentLocation.toFile());
-        workflowContextFactory.setMountpointRoot(currentLocation.getParent().toFile());
-        workflowContextFactory.setRemoteAddress(baseUri, "workflow");
-        workflowContextFactory.setRemoteAuthToken("token");
-        workflowCreation.setWorkflowContext(workflowContextFactory.createContext());
-        NodeContext.pushContext(WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(), workflowCreation));
+        final var wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(),
+            new WorkflowCreationHelper(context));
+        NodeContext.pushContext(wfm);
 
-        URLConnection connection = m_handler.openConnection(urlWithUmlaut);
-        URI expectedUri = new URI(baseUri.toString() + "/r%C3%B6w0.json:data").normalize();
-
-        assertThat("Unexpected resolved URL", connection.getURL().toURI(), is(expectedUri));
+        assertResolvedURIEquals("Unexpected resolved URL",
+            new URI(URI.create("https://localhost:8080/knime").toString() + "/r%C3%B6w0.json:data").normalize(),
+            new URL("knime://knime.workflow/../röw0.json"));
     }
 
     /**
@@ -754,23 +698,30 @@ public class ExplorerURLStreamHandlerTest {
      */
     @Test
     public void testRemoteWorkflowRelativeURLIsEncoded() throws Exception {
-        URI baseUri = new URI("http://localhost:8080/knime");
+        final var baseUri = new URI("http://localhost:8080/knime");
 
         // original location == current location
-        Path currentLocation = KNIMEConstants.getKNIMETempPath().resolve("root").resolve("workflow");
-        WorkflowCreationHelper workflowCreation = new WorkflowCreationHelper();
-        WorkflowContext.Factory workflowContextFactory = new WorkflowContext.Factory(currentLocation.toFile());
-        workflowContextFactory.setOriginalLocation(currentLocation.toFile());
-        workflowContextFactory.setRemoteAddress(baseUri, "workflow");
-        workflowContextFactory.setRemoteAuthToken("token");
-        workflowCreation.setWorkflowContext(workflowContextFactory.createContext());
-        WorkflowManager wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(), workflowCreation);
+        final var currentLocation = KNIMEConstants.getKNIMETempPath().resolve("root").resolve("workflow");
+        final var context = WorkflowContextV2.builder()
+                .withServerJobExecutor(exec -> exec
+                    .withCurrentUserAsUserId()
+                    .withLocalWorkflowPath(currentLocation)
+                    .withJobId(UUID.randomUUID())
+                    .withIsRemote(false))
+                .withServerLocation(loc -> loc
+                    .withRepositoryAddress(baseUri)
+                    .withWorkflowPath("/workflow")
+                    .withAuthenticator(new SimpleTokenAuthenticator("token"))
+                    .withDefaultMountId("Server"))
+                .build();
+
+        final var wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(),
+            new WorkflowCreationHelper(context));
         NodeContext.pushContext(wfm);
 
-        URL umlautURL = new URL("knime://knime.workflow/../testÜ.txt");
-        URLConnection connection = m_handler.openConnection(umlautURL);
-        URI expectedUri = new URI(baseUri.toString() + "/test%C3%9C.txt:data");
-        assertThat("Unexpected resolved URL", connection.getURL().toURI(), is(expectedUri));
+        assertResolvedURIEquals("Unexpected resolved umlaut URL",
+            new URI(baseUri.toString() + "/test%C3%9C.txt:data"),
+            new URL("knime://knime.workflow/../testÜ.txt"));
     }
 
     /**
@@ -781,39 +732,51 @@ public class ExplorerURLStreamHandlerTest {
     @Test
     public void testResolveInTemporaryCopy() throws Exception {
         Path currentLocation = KNIMEConstants.getKNIMETempPath().resolve("root").resolve("workflow");
-        WorkflowCreationHelper workflowCreation = new WorkflowCreationHelper();
-        WorkflowContext.Factory workflowContextFactory = new WorkflowContext.Factory(currentLocation.toFile());
-        workflowContextFactory.setOriginalLocation(currentLocation.toFile());
-        workflowContextFactory.setTemporaryCopy(true);
-        workflowContextFactory.setMountpointURI(new URI("knime://LOCAL/workflow"));
-        workflowCreation.setWorkflowContext(workflowContextFactory.createContext());
-        WorkflowManager wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(), workflowCreation);
+
+        final var context = WorkflowContextV2.builder()
+                .withAnalyticsPlatformExecutor(exec -> exec
+                    .withCurrentUserAsUserId()
+                    .withLocalWorkflowPath(currentLocation)
+                    .withMountpoint("LOCAL", currentLocation.getParent()))
+                .withServerLocation(loc -> loc
+                    .withRepositoryAddress(URI.create("https://localhost:1234/repository"))
+                    .withWorkflowPath("/workflow")
+                    .withAuthenticator(new SimpleTokenAuthenticator("token"))
+                    .withDefaultMountId("Server"))
+                .build();
+
+        final var wfm = WorkflowManager.ROOT.createAndAddProject("Test" + UUID.randomUUID(),
+            new WorkflowCreationHelper(context));
         NodeContext.pushContext(wfm);
 
-        URL url = new URL("knime://knime.workflow/../test.txt");
-        URLConnection connection = m_handler.openConnection(url);
-        URL expectedUrl = new URL("knime://LOCAL/test.txt");
-        assertThat("Unexpected resolved workflow-relative URL outside workflow", connection.getURL(), is(expectedUrl));
+        assertResolvedURLEquals("Unexpected resolved workflow-relative URL outside workflow",
+            new URL("knime://LOCAL/test.txt"),
+            new URL("knime://knime.workflow/../test.txt"));
 
-        url = new URL("knime://knime.workflow/test.txt");
-        connection = m_handler.openConnection(url);
-        expectedUrl = currentLocation.resolve("test.txt").toUri().toURL();
-        assertThat("Unexpected resolved workflow-relative URL inside workflow", connection.getURL(), is(expectedUrl));
+        assertResolvedURLEquals("Unexpected resolved workflow-relative URL inside workflow",
+            currentLocation.resolve("test.txt").toUri().toURL(),
+            new URL("knime://knime.workflow/test.txt"));
 
-        url = new URL("knime://knime.mountpoint/xxx/test.txt");
-        connection = m_handler.openConnection(url);
-        expectedUrl = new URL("knime://LOCAL/xxx/test.txt");
-        assertThat("Unexpected resolved mountpoint-relative URL", connection.getURL(), is(expectedUrl));
+        assertResolvedURLEquals("Unexpected resolved mountpoint-relative URL",
+            new URL("knime://LOCAL/xxx/test.txt"),
+            new URL("knime://knime.mountpoint/xxx/test.txt"));
 
-        url = new URL("knime://LOCAL/yyy/test.txt");
-        connection = m_handler.openConnection(url);
-        expectedUrl = url;
-        assertThat("Unexpected resolved absolute URL in same mount point", connection.getURL(), is(expectedUrl));
+        assertResolvedURLEquals("Unexpected resolved absolute URL in same mount point",
+            new URL("knime://LOCAL/yyy/test.txt"),
+            new URL("knime://LOCAL/yyy/test.txt"));
 
+        assertResolvedURLEquals("Unexpected resolved absolute URL in other mount point",
+            new URL("knime://Some-Other-Server/test.txt"),
+            new URL("knime://Some-Other-Server/test.txt"));
+    }
 
-        url = new URL("knime://Some-Other-Server/test.txt");
-        connection = m_handler.openConnection(url);
-        expectedUrl = url;
-        assertThat("Unexpected resolved absolute URL in other mount point", connection.getURL(), is(expectedUrl));
+    private void assertResolvedURLEquals(final String message, final URL expectedUrl, final URL url)
+            throws IOException {
+        assertEquals(message, expectedUrl, m_handler.openConnection(url).getURL());
+    }
+
+    private void assertResolvedURIEquals(final String message, final URI expectedUri, final URL url)
+            throws IOException, URISyntaxException {
+        assertEquals(message, expectedUri, m_handler.openConnection(url).getURL().toURI());
     }
 }
